# Seance

./: .editorconfig  LICENSE  README.md  flake.nix  package.nix  script.py  setup.cfg
contrib/: example.nix  seance-discord.service  seance.ini
nix/: module.nix  python-sed.nix
seance/: __main__.py  config.py  discord_bot.py  errors.py  telegram_bot.py
seance/discord_bot/: __init__.py  dm_mode.py
