[metadata]
name = seance
description = Channel the unseen
version = 0.2
url = https://github.com/Qyriad/Seance
author = Mikaela Szekely
author_email = mikaela.szekely@qyriad.me
license = MIT
platforms = any

[options]
packages = find:
install_requires =
	discord.py @ git+https://github.com/Rapptz/discord.py
	PythonSed @ git+https://github.com/GillesArcas/PythonSed
	emoji @ git+https://github.com/carpedm20/emoji
	python-telegram-bot @ git+https://github.com/python-telegram-bot/python-telegram-bot

[options.entry_points]
console_scripts = 
	seance-discord = seance.discord_bot:main
	seance-telegram = seance.telegram_bot:main
