# vim: ft=dosini
[metadata]
name = seance
description = Channel the unseen
version = 0.2
url = https://github.com/Qyriad/Seance
author = Mikaela Szekely
author_email = mikaela.szekely@qyriad.me
license = MIT
platforms = any

[options]
packages = find:

# discord.py 2.0a development version last checked for commit a8a6bf4f6c9d6cb71a23bf2079c410aeb1407a8b.
install_requires =
	discord.py @ git+https://github.com/Rapptz/discord.py@a8a6bf4f6c9d6cb71a23bf2079c410aeb1407a8b
	PythonSed @ git+https://github.com/modwizcode/PythonSed
	emoji @ git+https://github.com/carpedm20/emoji
	python-telegram-bot @ git+https://github.com/python-telegram-bot/python-telegram-bot

[options.entry_points]
console_scripts = 
	seance-discord = seance.discord_bot:main
	seance-telegram = seance.telegram_bot:main
